--- a/sync/app_python/sync.ini
+++ b/sync/app_python/sync.ini
@@ -2,22 +2,22 @@
 sql_path = ./
 
 [database_source_test]
-username = sjglb1
-password = jsglb1!!1921%
-hostname = TC0010
-hostport = 1521
-database = sjglb
+username = 
+password = 
+hostname = 
+hostport = 
+database = 
 
 [database_source]
-username = mds_read
-password = mds_read_ldch
-hostname = hexb-scan.exadata.db
-hostport = 1521
-database = MSOP
+username = 
+password = 
+hostname = 
+hostport = 
+database = 
 
 [database_target]
-username = zhouqr
-password = mm123456
-hostname = 172.26.146.42
-hostport = 3306
-database = dndcdata
+username = 
+password = 
+hostname = 
+hostport = 
+database = 
